--- a/pages/16174.html
+++ b/pages/16174.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -460,6 +460,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/Segal+conjecture">Segal conjecture</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a></p>
 </li>
 </ul>
@@ -476,7 +480,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Discussion in relation to <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a> is in</p>
+<p>Discussion in relation to <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a> and the <a class="existingWikiWord" href="/nlab/show/Segal+conjecture">Segal conjecture</a>-theorem is in</p>
 
 <ul>
 <li>
@@ -484,7 +488,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Gunnar+Carlsson">Gunnar Carlsson</a>, <em>Equivariant Stable Homotopy and Segal’s Burnside Ring Conjectur</em>, Annals of Mathematics Second Series, Vol. 120, No. 2 (Sep., 1984), pp. 189-224 (<a href="https://www.jstor.org/stable/2006940">jstor:2006940</a>, <a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/carlsson.pdf">pdf</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Gunnar+Carlsson">Gunnar Carlsson</a>, <em>Equivariant Stable Homotopy and Segal’s Burnside Ring Conjecture</em>, Annals of Mathematics Second Series, Vol. 120, No. 2 (Sep., 1984), pp. 189-224 (<a href="https://www.jstor.org/stable/2006940">jstor:2006940</a>, <a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/carlsson.pdf">pdf</a>)</p>
 </li>
 
 <li>
@@ -497,7 +501,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 04:56:22.
+  Last revised on September 10, 2018 at 05:11:55.
   See the <a href="https://ncatlab.org/nlab/history/Burnside ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
