--- a/pages/16174.html
+++ b/pages/16174.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/7282/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7282/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -422,7 +422,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#properties">Properties</a><ul><li><a href="#in_equivariant_homotopy_theory">In equivariant homotopy theory</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#properties">Properties</a><ul><li><a href="#AsTheEquivariantStableCohomotopyOfThePoint">As the equivariant stable cohomotopy of the point</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>The Burnside ring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G)</annotation></semantics></math> of a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is the analogue of the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> in the category of <a class="existingWikiWord" href="/nlab/show/finite+sets">finite sets</a>, as opposed to the category of <a class="existingWikiWord" href="/nlab/show/finite+dimensional+vector+spaces">finite dimensional vector spaces</a> over a field <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi></mrow><annotation encoding="application/x-tex">F</annotation></semantics></math>.</p>
@@ -441,9 +441,17 @@ margin-left: 0em;
 
 <h2 id="properties">Properties</h2>
 
-<h3 id="in_equivariant_homotopy_theory">In equivariant homotopy theory</h3>
+<h3 id="AsTheEquivariantStableCohomotopyOfThePoint">As the equivariant stable cohomotopy of the point</h3>
 
-<p>It turns out that the Burnside ring of a group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is isomorphic to the <a class="existingWikiWord" href="/nlab/show/colimit">colimit</a></p>
+<p>The Burnside ring is equivalently the <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a> of the point:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  A(G) \simeq \mathbb{S}_G(\ast)
+  \,.
+
+</annotation></semantics></math></div>
+<p>This is due to <a href="#Segal71">Segal 71</a>, see also <a href="#Lueck05">Lück 05, theorem 1.13</a>, <a href="#tomDieckPetrie78">tom Dieck-Petrie 78</a></p>
+
+<p>More explicitly, the Burnside ring of a group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is isomorphic to the <a class="existingWikiWord" href="/nlab/show/colimit">colimit</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><munder><mi>lim</mi><mo>⟶</mo></munder> <mi>V</mi></msub><mo stretchy="false">[</mo><msup><mi>S</mi> <mi>V</mi></msup><mo>,</mo><msup><mi>S</mi> <mi>V</mi></msup><msub><mo stretchy="false">]</mo> <mi>G</mi></msub></mrow><annotation encoding="application/x-tex">
   A(G) \simeq \underset{\longrightarrow}{\lim}_V [S^V,S^V]_G
 
@@ -451,7 +459,9 @@ margin-left: 0em;
 <p>over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/representations">representations</a> in a complete <a class="existingWikiWord" href="/nlab/show/G-universe">G-universe</a>, of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/homotopy+classes">homotopy classes</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-equivariant based <a class="existingWikiWord" href="/nlab/show/continuous+functions">continuous functions</a> from the <a class="existingWikiWord" href="/nlab/show/representation+sphere">representation sphere</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mi>V</mi></msup></mrow><annotation encoding="application/x-tex">S^V</annotation></semantics></math> to itself.</p>
 
 <p>(<a href="#GreenleesMay95">Greenlees-May 95, p. 8</a>)</p>
-
+<table><thead><tr><th></th><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/complex+K-theory">complex K-theory</a></th><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> <br /> of the <a class="existingWikiWord" href="/nlab/show/point">point</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>KU</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">KU_G(\ast) \simeq R(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{S}_G(\ast) \simeq A(G)</annotation></semantics></math></td></tr>
+<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">cohomology</a> <br /> of <a class="existingWikiWord" href="/nlab/show/classifying+space">classifying space</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion+theorem">Atiyah-Segal completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>≃</mo><mi>𝕂𝕌</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R(G) \simeq  \mathbb{KU}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{KU}_G(\ast)}  \simeq \mathbb{KU}(B G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Segal-Carlsson+completion+theorem">Segal-Carlsson completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>≃</mo><mi>𝕊</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G) \simeq  \mathbb{S}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{S}_G(\ast)}  \simeq \mathbb{S}(B G) </annotation></semantics></math> <br /></td></tr>
+</tbody></table>
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -480,9 +490,17 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Discussion in relation to <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a> and the <a class="existingWikiWord" href="/nlab/show/Segal+conjecture">Segal conjecture</a>-theorem is in</p>
+<p>Discussion in relation to <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a> and the <a class="existingWikiWord" href="/nlab/show/Segal-Carlsson+completion+theorem">Segal-Carlsson completion theorem</a> is in</p>
 
 <ul>
+<li id="Segal71">
+<p><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Equivariant stable homotopy theory</em>, In Actes du Congrès International des Math ématiciens (Nice, 1970), Tome 2 , pages 59–63. Gauthier-Villars, Paris, 1971</p>
+</li>
+
+<li id="tomDieckPetrie78">
+<p><a class="existingWikiWord" href="/nlab/show/Tammo+tom+Dieck">Tammo tom Dieck</a>, T, Petrie, <em>Geometric modules over the Burnside ring</em>, Invent. Math. 47 (1978) 273-287 (<a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/tomDieck-geometric.pdf">pdf</a>)</p>
+</li>
+
 <li>
 <p>Erkki Laitinen, <em>On the Burnside ring and stable cohomotopy of a finite group</em>, Mathematica Scandinavica Vol. 44, No. 1 (August 30, 1979), pp. 37-72 (<a href="https://www.jstor.org/stable/24491306">jstor:24491306</a>, <a class="existingWikiWord" href="/nlab/files/Laitinen79.pdf" title="pdf">pdf</a>)</p>
 </li>
@@ -491,7 +509,7 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Gunnar+Carlsson">Gunnar Carlsson</a>, <em>Equivariant Stable Homotopy and Segal’s Burnside Ring Conjecture</em>, Annals of Mathematics Second Series, Vol. 120, No. 2 (Sep., 1984), pp. 189-224 (<a href="https://www.jstor.org/stable/2006940">jstor:2006940</a>, <a href="https://web.math.rochester.edu/people/faculty/doug/otherpapers/carlsson.pdf">pdf</a>)</p>
 </li>
 
-<li>
+<li id="Lueck05">
 <p><a class="existingWikiWord" href="/nlab/show/Wolfgang+L%C3%BCck">Wolfgang Lück</a>, <em>The Burnside Ring and Equivariant Stable Cohomotopy for Infinite Groups</em> (<a href="https://arxiv.org/abs/math/0504051">arXiv:math/0504051</a>)</p>
 </li>
 </ul>
@@ -501,14 +519,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 05:11:55.
+  Last revised on September 10, 2018 at 06:58:07.
   See the <a href="https://ncatlab.org/nlab/history/Burnside ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Burnside+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Burnside+ring/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Burnside+ring" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Burnside+ring" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Burnside ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
