--- a/pages/19667.html
+++ b/pages/19667.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Gunnar Carlsson in nLab
+      Segal completion -- table in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Gunnar Carlsson
+      Segal completion -- table
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8963/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,51 +309,31 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
-<body>
-<ul>
-<li><a href="http://math.stanford.edu/~gunnar/">webpage</a></li>
-</ul>
-
-<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Segal+conjecture">Segal conjecture</a></p>
-
-<p><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a>, <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/persistent+homology">persistent homology</a></p>
-</li>
-</ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<body><table><thead><tr><th></th><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/complex+K-theory">complex K-theory</a></th><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> <br /> of the <a class="existingWikiWord" href="/nlab/show/point">point</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>KU</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">KU_G(\ast) \simeq R(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{S}_G(\ast) \simeq A(G)</annotation></semantics></math></td></tr>
+<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">cohomology</a> <br /> of <a class="existingWikiWord" href="/nlab/show/classifying+space">classifying space</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion+theorem">Atiyah-Segal completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>≃</mo><mi>𝕂𝕌</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R(G) \simeq  \mathbb{KU}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{KU}_G(\ast)}  \simeq \mathbb{KU}(B G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Segal-Carlsson+completion+theorem">Segal-Carlsson completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>≃</mo><mi>𝕊</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G) \simeq  \mathbb{S}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{S}_G(\ast)}  \simeq \mathbb{S}(B G) </annotation></semantics></math> <br /></td></tr>
+</tbody></table></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 06:29:56.
-  See the <a href="https://ncatlab.org/nlab/history/Gunnar Carlsson" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 10, 2018 at 06:31:53.
+  See the <a href="https://ncatlab.org/nlab/history/Segal completion -- table" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gunnar+Carlsson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gunnar+Carlsson/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Gunnar+Carlsson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gunnar+Carlsson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Gunnar Carlsson/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Segal+completion+--+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Segal completion -- table/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Gunnar+Carlsson" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Segal+completion+--+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Gunnar+Carlsson" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Segal+completion+--+table" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Gunnar+Carlsson" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Segal+completion+--+table" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
